TM-16202 Align dropdowns an fix layout issues on date range selector

--- a/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.scss
+++ b/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.scss
@@ -185,6 +185,10 @@
             border-spacing: 3px;
             padding: 0;
 
+            .k-widget.k-dropdown {
+              width: 100%;
+            }
+
             .expanded-button {
               display: none;
             }
